--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.0.285
     hooks:
-    -   id: ruff
+      - id: ruff
 
 -   repo: https://github.com/PyCQA/isort
     rev: 5.12.0
@@ -63,7 +63,7 @@ repos:
 -   repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
-    -   id: black
-    -   args:
+      - id: black
+        args:
           - --safe
           - "--target-version=py311"
