--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+otree = "^5.10.3"
+alembic = "^1.11.3"
+psycopg2 = "^2.9.7"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
