--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
         entry: "#!/"
         pass_filenames: true
         exclude: bin|cli|manage.py|app.py|setup.py|docs|test_data.py
-        files: \.py$
+        files: ./.py$
 
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.0.285
