--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,9 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
+      - id: name-tests-test
       - id: check-docstring-first
       - id: check-executables-have-shebangs
       - id: check-json
@@ -16,15 +15,20 @@ repos:
       - id: end-of-file-fixer
       - id: check-symlinks
       - id: mixed-line-ending
+      - id: sort-simple-yaml
       - id: fix-encoding-pragma
         args:
           - --remove
       - id: pretty-format-json
         args:
           - --autofix
-      - id: requirements-txt-fixer
 
--   repo: https://github.com/pre-commit/pygrep-hooks
+  - repo: https://gitlab.com/smop/pre-commit-hooks
+    rev: v1.0.0
+    hooks:
+      - id: check-poetry
+
+  - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
       - id: python-check-blanket-noqa
@@ -32,23 +36,7 @@ repos:
       - id: python-no-eval
       - id: python-no-log-warn
 
--   repo: local
-    hooks:
-      - id: no-shebang
-        language: pygrep
-        name: Do not use shebangs in non-executable files
-        description: Only executable files should have shebangs (e.g. '#!/usr/bin/env python')
-        entry: "#!/"
-        pass_filenames: true
-        exclude: bin|cli|manage.py|app.py|setup.py|docs|test_data.py
-        files: ./.py$
-
--   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.285
-    hooks:
-      - id: ruff
-
--   repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
       - id: isort
@@ -56,11 +44,32 @@ repos:
         files: \.py$
         # To keep consistent with the global isort skip config defined in setup.cfg
         exclude: ^build/.*$|^.tox/.*$|^venv/.*$
+        args:
+          - --lines-after-imports=2
+          - --profile=black
 
--   repo: https://github.com/psf/black
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.0.285
+    hooks:
+      - id: ruff
+        types_or: [python, pyi, jupyter]
+        args: [--fix]
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        args:
+          - --ignore=E203,E402,E501,E800,W503,W391,E261
+          - --select=B,C,E,F,W,T4,B9
+
+  - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
       - id: black
         args:
           - --safe
-          - "--target-version=py311"
+          - --target-version=py39
+          - --target-version=py310
+          - --target-version=py311
