--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,14 +42,23 @@ repos:
         args:
           - --lines-after-imports=2
           - --profile=black
+          - --line-length=80
+          - .
 
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.285
+    rev: v0.0.286
     hooks:
       - id: ruff
         types_or: [python, pyi, jupyter]
-        args: [--fix]
+        args:
+          - --fix
+          - --line-length=80
+          - --target-version=py310
+          - --target-version=py311
+          - --select=B,C,E,F,W,T4,B9
+          - --extend-per-file-ignores="__init__.py"
+          - .
 
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
@@ -58,6 +67,7 @@ repos:
         args:
           - --ignore=E203,E402,E501,E800,W503,W391,E261
           - --select=B,C,E,F,W,T4,B9
+          - .
 
   - repo: https://github.com/psf/black
     rev: 23.7.0
@@ -65,6 +75,7 @@ repos:
       - id: black
         args:
           - --safe
-          - --target-version=py39
           - --target-version=py310
           - --target-version=py311
+          - --line-length=80
+          - .
