--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,7 +55,7 @@ repos:
           - --fix
           - --line-length=80
           - --target-version=py311
-          - --select=B,C,E,F,W,T4,B9
+          - --select=B,C,E,F,W
           - --extend-per-file-ignores="__init__.py"
           - .
 
