--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,8 +56,7 @@ repos:
           - --line-length=80
           - --target-version=py311
           - --select=B,C,E,F,W
-          - --extend-per-file-ignores "__init__.py":D104
-          - .
+          - --extend-per-file-ignores __init__.py:D104
 
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
@@ -66,7 +65,6 @@ repos:
         args:
           - --ignore=E203,E402,E501,E800,W503,W391,E261
           - --select=B,C,E,F,W,T4,B9
-          - .
 
   - repo: https://github.com/psf/black
     rev: 23.7.0
@@ -76,4 +74,3 @@ repos:
           - --safe
           - --target-version=py311
           - --line-length=80
-          - .
