--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 otree = "^5.10.3"
 alembic = "^1.11.3"
 psycopg2 = "^2.9.7"
+flask-material = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
