--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.11"
 fastapi = "^0.103.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 alembic = "^1.12.0"
+asyncpg = "^0.28.0"
+psycopg2-binary = "^2.9.7"
+sqlalchemy = "^2.0.21"
 
 
 [build-system]
