--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ alembic = "^1.12.0"
 asyncpg = "^0.28.0"
 psycopg2-binary = "^2.9.7"
 sqlalchemy = "^2.0.21"
+fastapi-login = "^1.9.1"
+fastapi-sqlalchemy = "^0.2.1"
+psycopg2 = "^2.9.7"
 
 
 [build-system]
