--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,25 @@ version: '3.8'
 
 services:
   web:
+    restart: always
     build: .
     command: uvicorn app.main:app --host 0.0.0.0
     volumes:
       - .:/app
     ports:
       - "8008:8000"
-  db:
-    image: postgres:15-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    expose:
-      - 5432
-    environment:
-      - POSTGRES_USER=user_user
-      - POSTGRES_PASSWORD=password_password
-      - POSTGRES_DB=prijateli_tree
+  postgres:
+   restart: always
+   image: postgres:latest
+   environment:
+     POSTGRES_USER: user_user
+     POSTGRES_PASSWORD: password_password
+     POSTGRES_DB: prijateli_tree
+   volumes:
+     - postgres:/var/lib/postgresql/data
+   ports:
+     - "5432:5432"
 
 volumes:
-  postgres_data:
+  postgres:
+    driver: local
