--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   web:
     restart: always
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0
+    command: uvicorn --host 0.0.0.0 --port 8000 --reload prijateli_tree.app.main:app
     volumes:
       - .:/app
     links:
