--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,14 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_USER: prijateli
-      POSTGRES_PASSWORD: password_password
+      POSTGRES_PASSWORD: terriblepassword
       POSTGRES_DB: prijateli_tree
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
-      - "5433:5433"
+      - "5432:5432"
   web:
     restart: always
-    environment:
-      SQLALCHEMY_DATABASE_URI: postgresql://prijateli:password_password@postgres/prijateli_tree
     build: .
     command: uvicorn --host 0.0.0.0 --port 8000 --reload prijateli_tree.app.main:app
     volumes:
