--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,11 @@ services:
       - "5432:5432"
   web:
     restart: always
-    build: .
+    build:
+      context: .
+      args:
+        - DOCKER_BUILD_ENV
+      dockerfile: ./Dockerfile
     command: uvicorn --host 0.0.0.0 --port 8000 --reload prijateli_tree.app.main:app
     volumes:
       - .:/app
