--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@ version: '3.8'
 
 services:
   web:
-    build: ./project
-    command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    command: uvicorn prijateli_tree.app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
-      - ./prijateli_tree:/usr/src/app
+      - .:/usr/src/app
     ports:
-      - 8004:8000
+      - "8000:8000"
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/foo
     depends_on:
@@ -15,8 +17,8 @@ services:
 
   db:
     image: postgres:15.3
-    expose:
-      - 5432
+    ports:
+      - "2345:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
