--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,26 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/foo
+      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://postgres:postgres@db:5432/prijateli_tree
     depends_on:
       - db
 
   db:
-    image: postgres:15.3
+    image: postgres:latest
     ports:
-      - "2345:5432"
+      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=foo
+      - POSTGRES_DB=prijateli_tree
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
