--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 alembic==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
+annotated-types==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
 anyio[trio]==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
 async-generator==1.10 ; python_version >= "3.11" and python_version < "4.0"
 asyncpg==0.28.0 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
 bcrypt==4.0.1 ; python_version >= "3.11" and python_version < "4.0"
-cffi==1.15.1 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
+cffi==1.16.0 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 fastapi-login==1.9.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-sqlalchemy==0.2.1 ; python_version >= "3.11" and python_version < "4.0"
-fastapi==0.103.1 ; python_version >= "3.11" and python_version < "4.0"
+fastapi==0.103.2 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==2.0.2 ; python_version >= "3.11" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httptools==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -19,9 +20,10 @@ mako==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
 passlib[bcrypt]==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
-psycopg2==2.9.7 ; python_version >= "3.11" and python_version < "4.0"
+psycopg2==2.9.8 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and os_name == "nt" and implementation_name != "pypy" and python_version < "4.0"
-pydantic==1.10.8 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
 pyi18n-v2==1.2.1 ; python_version >= "3.11" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -31,7 +33,7 @@ sortedcontainers==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.21 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 trio==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
-typing-extensions==4.7.1 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn[standard]==0.23.2 ; python_version >= "3.11" and python_version < "4.0"
 uvloop==0.17.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "4.0"
 watchfiles==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
