--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://postgres:postgres@db:5432/prijateli_tree
+      SQLALCHEMY_DATABASE_URI: 'postgresql://postgres:postgres@db:5432/prijateli_tree'
     depends_on:
       - db
 
@@ -20,6 +20,6 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=prijateli_tree
+      POSTGRES_USER: 'postgres'
+      POSTGRES_PASSWORD: 'postgres'
+      POSTGRES_DB: 'prijateli_tree'
