--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   db:
+    restart: always
     image: postgres:latest
     ports:
       - "5432:5432"
@@ -11,10 +12,11 @@ services:
       POSTGRES_DB: 'prijateli_tree'
 
   web:
+    restart: always
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: uvicorn prijateli_tree.app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    command: uvicorn prijateli_tree.app.main:app --reload --host 0.0.0.0 --port 8000
     volumes:
       - .:/usr/src/app
     ports:
