--- a/.github/workflows/format-and-fail.yml
+++ b/.github/workflows/format-and-fail.yml
@@ -2,7 +2,9 @@ name: Format-and-Fail
 on:
   pull_request:
     branches:
-      - develop
+      - main
+  push:
+    branches:
       - main
 
 jobs:
