--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,13 @@ fastapi = "^0.103.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 alembic = "^1.12.0"
 asyncpg = "^0.28.0"
-sqlalchemy = "^2.0.21"
+sqlalchemy = "^2.0.22"
 fastapi-login = "^1.9.1"
 fastapi-sqlalchemy = "^0.2.1"
 psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.0"
 pyi18n-v2 = "^1.2.1"
+pydantic = "^2.4.2"
 
 
 [build-system]
