--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ bcrypt==4.0.1 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.16.0 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+fastapi-localization==0.0a2.dev3 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-login==1.9.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-sqlalchemy==0.2.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.103.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -30,7 +31,7 @@ python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sortedcontainers==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
-sqlalchemy==2.0.21 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.22 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 trio==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
