Add ability to set language (#18)
## Describe Your Changes
Migrated the `yml` files to `json` and added an endpoint to set the
default language.

## Non-Obvious Technical Information
The json files make use of a lot of unicode characters, but provided we
are using `utf-8` encoding, we should be 💯 .

## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
(prijatelitree-py3.11) michaelp@MacBook-Air-7 PrijateliTree % curl -i -X POST -H 'Accept-Language: en' http://localhost:8000/language
HTTP/1.1 200 OK
date: Sun, 22 Oct 2023 18:46:14 GMT
server: uvicorn
content-length: 28
content-type: application/json

{"message":"It done worked"}%                                                                                                                                                                                   (prijatelitree-py3.11) michaelp@MacBook-Air-7 PrijateliTree % curl -i -X POST -H 'Accept-Language: tr' http://localhost:8000/language
HTTP/1.1 200 OK
date: Sun, 22 Oct 2023 18:47:00 GMT
server: uvicorn
content-length: 28
content-type: application/json

{"message":"It done worked"}%
```

```commandline
2023-10-22 13:46:14 prijatelitree-web-1       | 2023-10-22 18:46:14,395 INFO sqlalchemy.engine.Engine COMMIT
2023-10-22 13:46:14 prijatelitree-web-1       | INFO:     Started server process [23]
2023-10-22 13:46:14 prijatelitree-web-1       | INFO:     Waiting for application startup.
2023-10-22 13:46:14 prijatelitree-web-1       | INFO:     Application startup complete.
2023-10-22 13:46:14 prijatelitree-web-1       | !!!!!!! en
2023-10-22 13:46:14 prijatelitree-web-1       | INFO:     192.168.65.1:61869 - "POST /language HTTP/1.1" 200 OK
2023-10-22 13:47:00 prijatelitree-web-1       | !!!!!!! tr
2023-10-22 13:47:00 prijatelitree-web-1       | INFO:     192.168.65.1:61870 - "POST /language HTTP/1.1" 200 OK
```

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.0"
 pyi18n-v2 = "^1.2.1"
 pydantic = "^2.4.2"
+fastapi-localization = "^0.0a2.dev3"
 
 
 [build-system]
