--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.0"
 pyi18n-v2 = "^1.2.1"
 pydantic = "^2.4.2"
 fastapi-localization = "^0.0a2.dev3"
+jinja2 = "^3.1.2"
 
 
 [build-system]
