--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ greenlet==3.0.0 ; python_version >= "3.11" and python_version < "4.0" and (platf
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httptools==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mako==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
