--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,5 +36,6 @@ services:
       POSTGRES_PASSWORD: 'postgres'
       POSTGRES_DB: 'prijateli_tree'
       SQLALCHEMY_DATABASE_URI: "postgresql://postgres:postgres@postgres/prijateli_tree"
+      LOGIN_SECRET_KEY: '3a5f3125e1af1763756297e040cd05f8f24fcab15f78805e'
     links:
       - 'postgres:postgres'
