--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pyi18n-v2 = "^1.2.1"
 fastapi-localization = "^0.0a2.dev3"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
+pytest = "^7.4.3"
+requests = "^2.31.0"
 
 
 [build-system]
