--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ async-generator==1.10 ; python_version >= "3.11" and python_version < "4.0"
 asyncpg==0.28.0 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
 bcrypt==4.0.1 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2023.11.17 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.16.0 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 fastapi-localization==0.0a2.dev3 ; python_version >= "3.11" and python_version < "4.0"
@@ -17,26 +19,32 @@ greenlet==3.0.0 ; python_version >= "3.11" and python_version < "4.0" and (platf
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httptools==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mako==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 passlib[bcrypt]==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
+pluggy==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2==2.9.9 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and os_name == "nt" and implementation_name != "pypy" and python_version < "4.0"
 pydantic-core==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
 pyi18n-v2==1.2.1 ; python_version >= "3.11" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
+pytest==7.4.3 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sortedcontainers==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.22 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 trio==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
+urllib3==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn[standard]==0.23.2 ; python_version >= "3.11" and python_version < "4.0"
 uvloop==0.17.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "4.0"
 watchfiles==0.20.0 ; python_version >= "3.11" and python_version < "4.0"
