--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ fastapi-sqlalchemy==0.2.1 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.103.2 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.0.2 ; python_version >= "3.11" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
+httpcore==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
 httptools==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
+httpx==0.26.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -41,6 +43,7 @@ requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sortedcontainers==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.23 ; python_version >= "3.11" and python_version < "4.0"
+sqlmodel==0.0.14 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 trio==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
