--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -6,7 +6,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update && apt-get -y install netcat gcc postgresql libpq-dev python-dev \
-    xvfb firefox-esr libpq-dev python3-dev libsqlite3-0 && apt-get clean
+    xvfb firefox-esr && apt-get clean
 
 RUN pip install --upgrade pip
 COPY ../requirements.txt .
