--- a/dockerfiles/Dockerfile-test
+++ b/dockerfiles/Dockerfile-test
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get -y install libpq-dev python-dev \
     xvfb firefox-esr python3-dev libsqlite3-0 && apt-get clean
 
 RUN pip install --upgrade pip
-COPY ../requirements.txt .
+COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY .. .
+COPY . .
