--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -5,8 +5,9 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN apt-get update && apt-get -y install netcat gcc postgresql libpq-dev python-dev \
-    xvfb firefox-esr && apt-get clean
+RUN apt-get update \
+  && apt-get -y install netcat gcc postgresql libpq-dev python3-dev \
+  && apt-get clean
 
 RUN pip install --upgrade pip
 COPY ../requirements.txt .
