--- a/dockerfiles/Dockerfile-test
+++ b/dockerfiles/Dockerfile-test
@@ -7,7 +7,7 @@ ENV PYTHONUNBUFFERED 1
 ENV DATABASE_URL=""
 
 RUN apt-get update && apt-get -y install gcc libpq-dev python3-dev \
-    xvfb firefox-esr libsqlite3-0 && apt-get clean
+    libsqlite3-0 && apt-get clean
 
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
