--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,15 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run:  make test
+  requirements:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.11" ]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Validate requirements.txt
+        run: make create_requirements
   pre-commit:
     runs-on: ubuntu-latest
     steps:
