--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         python-version: [ "3.11" ]
     steps:
       - uses: actions/checkout@v3
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
       - name: Validate requirements.txt
         run: make create_requirements
   pre-commit:
