Add testing framework (#118)
## Describe Your Changes
Add testing framework, GitHub Action, and baseline test.

## Relevant Information
https://sqlmodel.tiangolo.com/tutorial/fastapi/tests/

## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
(prijatelitree-py3.11) michaelp@MacBook-Air-18 PrijateliTree % make test
docker-compose up -d
[+] Building 0.0s (0/0)                                                                                                                                                                    docker:desktop-linux
[+] Running 2/0
 ✔ Container prijatelitree-postgres-1  Running                                                                                                                                                             0.0s 
 ✔ Container prijatelitree-web-1       Running                                                                                                                                                             0.0s 
ENV=testing docker-compose run --rm web pytest -vsx ./prijateli_tree/tests/;
[+] Building 0.0s (0/0)                                                                                                                                                                    docker:desktop-linux
[+] Creating 1/0
 ✔ Container prijatelitree-postgres-1  Running                                                                                                                                                             0.0s 
[+] Building 0.0s (0/0)                                                                                                                                                                    docker:desktop-linux
DEBUG:	Routers loaded and static files mounted.
============================================================================================= test session starts ================================================================================

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
-name: Format-and-Fail
+name: Continuous-Integration
+
 on:
   pull_request:
     branches:
@@ -7,7 +8,21 @@ on:
     branches:
       - main
 
+  workflow_dispatch:
+
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    env:
+      ENV: "testing"
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run tests
+        run:  make test
+
   pre-commit:
     runs-on: ubuntu-latest
     steps:
