--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mako==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.2 ; python_version >= "3.12" and python_version < "4.0" or python_version == "3.11"
+openpyxl==3.0.9 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.3.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
@@ -58,3 +59,4 @@ uvicorn[standard]==0.23.2 ; python_version >= "3.11" and python_version < "4.0"
 uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "4.0"
 watchfiles==0.21.0 ; python_version >= "3.11" and python_version < "4.0"
 websockets==12.0 ; python_version >= "3.11" and python_version < "4.0"
+```
