--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cffi==1.16.0 ; os_name == "nt" and implementation_name != "pypy" and python_vers
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+et-xmlfile==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-localization==0.0a2.dev3 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-login==1.9.2 ; python_version >= "3.11" and python_version < "4.0"
 fastapi-sqlalchemy==0.2.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -26,6 +27,7 @@ jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mako==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.2 ; python_version >= "3.12" and python_version < "4.0" or python_version == "3.11"
+openpyxl==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.3.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
