--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ sqlmodel = "^0.0.14"
 httpx = "^0.26.0"
 pandas = "^2.1.4"
 openpyxl = "^3.1.2"
+bcrypt = "4.0.1"
+passlib = "^1.7.4"
 
 
 [build-system]
