--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ anyio[trio]==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
 async-generator==1.10 ; python_version >= "3.11" and python_version < "4.0"
 asyncpg==0.28.0 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
-bcrypt==4.1.1 ; python_version >= "3.11" and python_version < "4.0"
+bcrypt==4.0.1 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2023.11.17 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.16.0 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -30,6 +30,7 @@ openpyxl==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.3.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
+passlib==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
 passlib[bcrypt]==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
 pluggy==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2==2.9.9 ; python_version >= "3.11" and python_version < "4.0"
