--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     build:
       context: .
       dockerfile: dockerfiles/Dockerfile
-    command: uvicorn prijateli_tree.app.main:app --reload --host 0.0.0.0 --port 8000
+    command: gunicorn --reload --workers 2 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0 prijateli_tree.app.main:app
     volumes:
       - .:/usr/src/app
     ports:
